# meson-partial-build

./: README.md  meson.build  tempita.py
package/: meson.build
package/lib/: lib.pyx.in  meson.build
package/utils/: meson.build  utils.pxd
